UserManager: fix advancing seat loading state machine

Because the session proxy creating happened synchronously, seat
loading state was incremented, but nothing called load_seat_incrementally()
again, meaning that it never advanced to next step. Making it async
like the other operations fixes it.

https://bugs.freedesktop.org/show_bug.cgi?id=46794